fix jump

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,11 +26,15 @@ body {
     background: url('../images/hero-bg-top.jpg') no-repeat center center; /* Background image for navbar */
     background-size: cover; /* Ensures image covers the entire navbar */
     padding: 1rem 2rem;
-    position: sticky;
+   
     top: 0;
     z-index: 1000;
     color: white; /* Ensure text is readable */
     border-bottom: 0.1px white solid; /* Optional: Add a border for separation */
+
+    position: fixed; /* More reliable than sticky on mobile */
+    width: 100%;
+    height: 60px; /* Explicit height */
   }
   
   /*
@@ -72,7 +76,10 @@ body {
   /* Hero Section */
   .hero {
     background: url('../images/hero-bg.jpg') no-repeat center center/cover;
-    height: 100vh;
+    
+    /*height: 100vh;*/
+    height: calc(var(--vh, 1vh) * 100);
+
     display: flex;
     justify-content: center;
     align-items: center;
